# picture

./: Cargo.toml  README.md
benches/: picture_bench.rs
compile-tests/: pixels_mut.rs  pixels_mut.stderr  split_mut_then_view.rs  split_mut_then_view.stderr  split_mut_twice_then_view.rs  split_mut_twice_then_view.stderr  split_then_view_mut.rs  split_then_view_mut.stderr  view_mut.rs  view_mut.stderr
examples/: blur.rs  convert.rs  diff.rs  dither.rs  drawing.rs  fractal.rs  grayscale.rs  resize.rs  swap.rs
src/: lib.rs
src/buffer/: common.rs  iter.rs  mod.rs
src/buffer/view/: iter.rs  mod.rs
src/drawing/: mod.rs
src/formats/: mod.rs  png.rs  qoi.rs
src/pixel/: common.rs  iter.rs  mod.rs
src/processing/: filters.rs  mod.rs
src/util/: macros.rs  mod.rs
src/view/: erased.rs  iter.rs  mod.rs
