[package]
name = "picture"
description = "a fast and flexible image manipulation crate."
version = "0.1.0"
edition = "2021"
authors = ["vxpm"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["image", "pixel", "processing", "imaging", "painting"]
categories = ["multimedia::images"]

[dev-dependencies]
proptest = "1"
trybuild = "1"
criterion = { version = '0.4', features = ["real_blackbox"] }
num-complex = "0.4"
image = { version = "0.24", features = ["png"] }

[[bench]]
name = "picture_bench"
harness = false

[dependencies]
bytemuck = "1.12.1"
paste = "1.0.9"
rgb = "0.8.34"
arrayvec = "0.7"
thiserror = "1"
qoi = { version = "0.4", optional = true }
either = { version = "1.8", optional = true }
png = { version = "0.17", optional = true }

[features]
default = ["qoi", "png"]
unstable = []
u64_dimensions = []
formats = []

# formats
qoi = ["formats", "dep:qoi", "dep:either"]
png = ["formats", "dep:png"]
