[package]
name = "picture"
description = "a fast and flexible image manipulation crate."
version = "0.2.0"
edition = "2021"
authors = ["vxpm"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["image", "pixel", "processing", "imaging", "painting"]
categories = ["multimedia::images"]
rust-version = "1.65"
repository = "https://github.com/vxpm/picture"
exclude = ["examples/*", "compile-tests/*"]

[profile.bench]
debug = true

[dev-dependencies]
proptest = "1"
trybuild = "1"
criterion = { version = '0.5' }
num-complex = "0.4"
image = { version = "0.24", features = ["png"] }

[lib]
bench = false

[[bench]]
name = "picture_bench"
harness = false

[dependencies]
bytemuck = "1.14"
paste = "1"
rgb = "0.8"
arrayvec = "0.7"
thiserror = "1"
qoi = { version = "0.4", optional = true }
either = { version = "1.8", optional = true }
png = { version = "0.17", optional = true }

[features]
default = ["qoi", "png"]
unstable = []
formats = []

# formats
qoi = ["formats", "dep:qoi", "dep:either"]
png = ["formats", "dep:png"]
